be compatible with mongoose 4.x

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "extend": "^2.0.0"
   },
   "peerDependencies": {
-    "mongoose": "~4.0.0"
+    "mongoose": "^4.0.0"
   },
   "devDependencies": {
     "async": "*",
     "chai": "*",
     "mocha": "*",
-    "mongoose": "~4.0.0"
+    "mongoose": "^4.0.0"
   },
   "keywords": [
     "mongoose",
